samples/_failures_safe/1761322372_cb29fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae2b117a.c: In function ‘main’:
./samples/SAFE/__tmp_ae2b117a.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("\nMatrix B Transpose:\n");
      |     ^~~~~~
